# SentinelAI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PROJECT_ARCHITECTURE.md  README.md  SECURITY.md  docker-compose.ci.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: backend.yml  e2e.yml  frontend.yml  security.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  openapi.json  pyproject.toml
backend/app/: main.py  worker.py
backend/app/agents/: base.py  detection.py  investigation.py  reporting.py  response.py  runtime.py  triage.py
backend/app/api/: deps.py  pagination.py
backend/app/api/routers/: admin.py  alerts.py  audit.py  auth.py  dashboard.py  detection.py  health.py  hosts.py  ingest.py  models.py  reports.py  response.py  stream.py  tasks.py  telemetry.py
backend/app/core/: broadcast.py  config.py  cookies.py  csrf.py  db.py  errors.py  events.py  logging.py  metrics.py  middleware.py  password_policy.py  queue.py  ratelimit.py  security.py  security_headers.py  tracing.py  ws_manager.py
backend/app/ingestion/: csv_loader.py  feature_schema.py  parser.py
backend/app/models/: __init__.py  agent_decision.py  alert.py  alert_artifact.py  auth_session.py  enums.py  incident_report.py  ingestion_job.py  mixins.py  model_activation.py  model_drift.py  model_shadow_eval.py  model_version.py  network_event.py  response_action.py  task.py  user.py
backend/app/schemas/: __init__.py  alert.py  audit.py  auth.py  common.py  detection.py  ingestion.py  investigation.py  model_registry.py  reporting.py  response.py  task.py  telemetry.py  timeline.py
backend/app/scripts/: __init__.py  dump_openapi.py  retention.py
backend/app/services/: __init__.py  audit_service.py  correlation_service.py  demo_service.py  detection_service.py  drift_service.py  explanation_service.py  ingestion_service.py  investigation_service.py  model_lifecycle_service.py  model_registry.py  notification_service.py  pdf_renderer.py  reporting_renderer.py  reporting_service.py  response_rules.py  response_service.py  retention_service.py  session_service.py  task_service.py  timeline_service.py  triage_rules.py  triage_service.py  user_service.py
backend/app/services/response_executors/: __init__.py  base.py  mock_lab.py  nftables_lab.py  simulated.py
backend/app/tasks/: __init__.py  jobs.py
backend/data/samples/: sample_flows.csv
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_event_detected_at.py  0003_triage_and_disposition.py  0004_response_action_types.py  0005_users_and_roles.py  0006_model_drift_snapshots.py  0007_lab_response_controls.py  0008_auth_sessions.py  0009_account_lockout.py  0010_tasks.py  0011_soft_delete_archive.py  0012_model_lifecycle.py
backend/tests/: conftest.py  test_admin.py  test_agents.py  test_auth.py  test_broadcast.py  test_correlation.py  test_detection.py  test_drift.py  test_events.py  test_explanation.py  test_health.py  test_ingestion.py  test_investigation.py  test_lab_response.py  test_metrics.py  test_ml_maturity.py  test_models.py  test_notifications.py  test_ops_scripts.py  test_password_policy.py  test_pdf_renderer.py  test_ratelimit.py  test_reporting.py  test_response.py  test_security_headers.py  test_sensor_ingest.py  test_shadow_ab.py  test_stream.py  test_tasks.py  test_telemetry.py  test_triage.py
backend/tests/integration/: conftest.py  test_agents.py  test_audit.py  test_auth_sessions.py  test_constraints.py  test_migrations.py  test_model_lifecycle.py  test_queries.py  test_retention.py  test_tasks.py  test_timeline.py
docs/: API.md  AUTH.md  BACKUP_DR.md  DATASET.md  DATA_RETENTION.md  DEMO_GUIDE.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DEPLOYMENT_SECURITY.md  DETECTION.md  ETHICS.md  HARDENING_PLAN.md  IMPLEMENTATION_BACKLOG.md  INGESTION.md  INVESTIGATION.md  KOD_REHBERI.md  LAB_RESPONSE.md  LIVE_SENSOR.md  ML_TRAINING.md  MODEL_DRIFT.md  MODEL_LIFECYCLE.md  NOTIFICATIONS.md  OBSERVABILITY.md  QUALITY.md  RATE_LIMITING.md  REPORTING.md  RESPONSE.md  TASK_QUEUE.md  TRIAGE.md
frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/e2e/: README.md  helpers.ts  login.spec.ts  response.spec.ts  workflow.spec.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ConnectionPill.tsx  DispositionPill.tsx  ErrorBoundary.tsx  LanguageSwitcher.tsx  MarkdownView.test.tsx  MarkdownView.tsx  SeverityPill.test.tsx  SeverityPill.tsx  StatCard.tsx  StatusPill.tsx  icons.tsx
frontend/src/lib/: cn.test.ts  drift.test.ts  drift.ts  format.test.ts  format.ts  readiness.test.ts  readiness.ts  response.test.ts  response.ts  types.ts  ws.ts
frontend/src/pages/: AdminUsersPage.tsx  AlertDetailPage.test.tsx  AlertDetailPage.tsx  AlertsPage.tsx  AuditPage.tsx  DashboardPage.test.tsx  DashboardPage.tsx  HostTimelinePage.tsx  IngestionPage.tsx  LoginPage.test.tsx  LoginPage.tsx  ReportsPage.test.tsx  ReportsPage.tsx  (+3 more)
infra/: README.md
infra/k8s/: README.md
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
infra/scripts/: backup_db.sh  bootstrap.sh  demo_seed.sh  e2e.sh  restore_db.sh  run_single_container.sh  seed.sh  smoke_demo.sh  wait_for_db.sh
infra/single-container/: entrypoint.sh  spa_server.py
ml/: .gitignore  README.md  __init__.py  artifacts.py  baseline.py  calibration.py  data_loader.py  evaluate.py  feature_list.py  hpo.py  metrics.py  pipeline.py  preprocess.py  profiles.py  pyproject.toml  sample_export.py  sampling.py  synthetic.py  train.py
ml/tests/: test_calibration.py  test_canonical_features.py  test_feature_parity.py  test_hpo.py  test_profiles.py  test_sampling.py
sensor/: Dockerfile  README.md  pyproject.toml
sensor/samples/: eve.json
sensor/sentinelai_sensor/: __init__.py  __main__.py  client.py  config.py  parsers.py  runner.py  safety.py
sensor/tests/: test_config.py  test_parsers.py  test_runner.py  test_safety.py
(+92 files in other folders)
