[project]
name = "sentinelai-backend"
version = "0.1.0"
description = "SentinelAI backend — FastAPI service for AI-driven intrusion detection and response."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "SentinelAI Team" }]
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "python-jose[cryptography]>=3.3",
    # passlib 1.7.4 (unmaintained) is incompatible with bcrypt >= 4.1 / 5.x —
    # its backend-detection path raises on the 72-byte check. Pin bcrypt to the
    # last 4.0.x, the documented stable pairing with passlib's bcrypt handler.
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0.1,<4.1",
    "httpx>=0.27",
    "websockets>=13.1",
    "structlog>=24.4",
    "python-multipart>=0.0.12",
    "numpy>=2.1",
    "pandas>=2.2",
    # Pinned to match ml/pyproject.toml exactly: a model is trained in ml/.venv
    # and served here, so the sklearn version must agree or joblib unpickling of
    # the pipeline breaks across minor versions.
    "scikit-learn==1.9.0",
    "joblib>=1.4",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    # Pinned so local, pre-commit, and CI all format/lint identically.
    "ruff==0.15.16",
    "mypy>=1.13",
    "pip-audit>=2.7",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# E501: long lines tolerated. UP042: the project intentionally uses
# `class X(str, enum.Enum)` (not StrEnum) so `str(member)` keeps the Enum repr
# and SQLAlchemy/serialization behavior is unchanged — converting would alter
# behavior. RUF001/2/3: typographic characters (×, –, ▶, ✓) are deliberate in
# human-readable output strings/comments; "fixing" them would change emitted text.
ignore = ["E501", "UP042", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# Blind `pytest.raises(Exception)` is acceptable in these failure-path tests.
"tests/**" = ["B017"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
