[project]
name = "sentinelai-backend"
version = "0.1.0"
description = "SentinelAI backend — FastAPI service for AI-driven intrusion detection and response."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "SentinelAI Team" }]
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.36",
    # Required by SQLAlchemy's asyncio engine; not always pulled in transitively.
    "greenlet>=3.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "python-jose[cryptography]>=3.3",
    # passlib 1.7.4 (unmaintained) is incompatible with bcrypt >= 4.1 / 5.x —
    # its backend-detection path raises on the 72-byte check. Pin bcrypt to the
    # last 4.0.x, the documented stable pairing with passlib's bcrypt handler.
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0.1,<5.1",
    "httpx>=0.27",
    "websockets>=13.1",
    "structlog>=24.4",
    "python-multipart>=0.0.12",
    "numpy>=2.1",
    "pandas>=2.2",
    # Pinned to match ml/pyproject.toml exactly: a model is trained in ml/.venv
    # and served here, so the sklearn version must agree or joblib unpickling of
    # the pipeline breaks across minor versions.
    "scikit-learn==1.9.0",
    "joblib>=1.4",
    "redis>=5.0",
    "prometheus-client>=0.20",
    # Pure-Python PDF generation for incident reports (no system libs, unlike
    # weasyprint). Renders the report markdown into a downloadable PDF.
    "reportlab>=4.2",
    # Async (asyncio-native) Redis task queue — fits the async backend; the
    # worker calls the same async services directly. See docs/TASK_QUEUE.md.
    "arq>=0.26",
]

[project.optional-dependencies]
# OpenTelemetry tracing is optional + no-op unless configured. Install with
# `pip install -e ".[otel]"` and set SENTINEL_OTEL_ENABLED=true to activate.
otel = [
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    # Pinned so local, pre-commit, and CI all format/lint identically.
    "ruff==0.15.20",
    "mypy>=1.13",
    "pip-audit>=2.7",
    # Real-Postgres integration tests (`pytest -m integration`). Spins up a
    # throwaway Postgres container; needs Docker. Optional for the unit suite.
    "testcontainers[postgres]>=4.8",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# The default run is the fast, DB-free unit suite. Integration tests
# (real Postgres via testcontainers, needs Docker) are excluded here and
# opted into with `pytest -m integration`, which overrides this -m filter.
addopts = "-ra --strict-markers -m 'not integration'"
markers = [
    "integration: real-database tests; require Docker (run with `pytest -m integration`).",
]

# Coverage is opt-in on the command line (`pytest --cov=app`) so the default run
# stays fast; CI adds `--cov` and the fail_under gate below keeps it from slipping.
[tool.coverage.run]
source = ["app"]
branch = false
omit = [
    "app/scripts/*",
    "app/worker.py",  # process entrypoint, exercised only under a live arq worker
]

[tool.coverage.report]
show_missing = true
skip_covered = false
# Floor for the DB-free unit suite (integration tests run in a separate job and
# cover the rest). Kept below the current ~68% so a small refactor doesn't red CI.
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# E501: long lines tolerated. UP042: the project intentionally uses
# `class X(str, enum.Enum)` (not StrEnum) so `str(member)` keeps the Enum repr
# and SQLAlchemy/serialization behavior is unchanged — converting would alter
# behavior. RUF001/2/3: typographic characters (×, –, ▶, ✓) are deliberate in
# human-readable output strings/comments; "fixing" them would change emitted text.
ignore = ["E501", "UP042", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# Blind `pytest.raises(Exception)` is acceptable in these failure-path tests.
"tests/**" = ["B017"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
