[project]
name = "sentinelai-sensor"
version = "0.1.0"
description = "SentinelAI live-flow sensor — tails Zeek/Suricata flow logs and posts them to the backend (lab-only, disabled by default)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff==0.15.20",
]

[project.scripts]
sentinelai-sensor = "sentinelai_sensor.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinelai_sensor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
